# erp-inventory

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  Makefile  docker-compose.yaml  docker-entrypoint.sh  fly.toml  pyproject.toml
apps/bom/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py
apps/bom/migrations/: 0001_initial.py  (+5 more)
apps/prefs/: admin.py  apps.py  context_processors.py  currency.py  forms.py  models.py  tests.py  urls.py  views.py
apps/procurement/: admin.py  apps.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
apps/production/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/users/: decorators.py  models.py  urls.py  views.py
apps/warehouse/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
core/: settings.py  urls.py
templates/: 403.html  base.html  unauth_base.html
templates/bom/: bom_detail_dashboard.html  create_bom.html  dashboard.html  edit_bom.html  inventory_dashboard.html  item_form.html  item_list.html
templates/prefs/: organization_settings.html  settings_hub.html
templates/procurement/: po_detail.html  po_form.html  po_list.html  receive_form.html  supplier_form.html  supplier_list.html
templates/production/: order_detail.html  order_form.html  order_list.html
templates/shared/: navbar.html  sidebar.html
templates/users/: login.html  no_access.html
templates/warehouse/: customer_form.html  customer_list.html  stock_ledger_list.html  stock_move.html  warehouse_form.html  warehouse_list.html  warehouse_out.html  warehouse_stock.html
(+31 files in other folders)
