[project]
name = "erp-inventory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datastar-py>=0.8.0",
    "django>=6.0.4",
    "django-browser-reload>=1.21.0",
    "django-cotton>=2.6.2",
    "django-htmx>=1.27.0",
    "gunicorn>=23.0.0",
    "model-bakery>=1.23.4",
    "whitenoise>=6.8.0",
]

[dependency-groups]
dev = [
    "django-template-lsp>=1.2.2",
    "django-types>=0.23.0",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
